Fixed overflow issue with JSON text loading in for test

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -42,7 +42,9 @@ body {
 
 .Form {
   .words-container {
+    max-height: 30vh;
     max-width: 70vw;
+    overflow: auto;
   }
 
   .word-to-type {
